<resources>
    <string name="app_name">Friendsr</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="friendsr">Friendsr</string>
    <string name="intro">Click on an eligible single user to learn more and see if you are compatible for a date!</string>
    <string name="chandler">Chandler</string>
    <string name="joey">Joey</string>
    <string name="monica">Monica</string>
    <string name="phoebe">Phoebe</string>
    <string name="ross">Ross</string>
    <string name="rachel">Rachel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_album">Choose From Album</string>
    <string-array name="friend_names">
        <item>Chandler</item>
        <item>Joey</item>
        <item>Monica</item>
        <item>Phoebe</item>
        <item>Rachel</item>
        <item>Ross</item>
    </string-array>
    <string-array name="friend_full_names">
        <item>Chandler Bing</item>
        <item>Joey Tribbiani</item>
        <item>Monica Geller</item>
        <item>Phoebe Buffay</item>
        <item>Rachel Green</item>
        <item>Ross Geller</item>
    </string-array>
</resources>